# cs-qualif-step2

./: .gitignore  README.md  main.py  pyproject.toml
cs-qualif-step2/: Register device.bru  bruno.json
cs_qualif_step2/config/: get_device_service.py
cs_qualif_step2/core/api/: device_resource.py
cs_qualif_step2/core/api/dto/request/: register_device_request.py  update_infos_request.py
cs_qualif_step2/core/api/handler/: conflict_exception_handler.py  invalid_input_exception_handler.py  server_exception_handler.py  validation_exception_handler.py
cs_qualif_step2/core/application/: device_service.py
cs_qualif_step2/core/application/dto/: device_config.py  new_infos.py
cs_qualif_step2/core/domain/device/: device.py  device_id.py  device_repository.py  devicefactory.py
cs_qualif_step2/core/domain/device/exception/: device_with_same_mac_address_exception.py  invalid_mac_adress.py
cs_qualif_step2/core/domain/exception/: ConflictException.py
cs_qualif_step2/core/infra/: in_memory_device_repository.py
cs_qualif_step2/core/resource/: device_resource.py
cs_qualif_step2/core/resource/dto/request/: register_device_request.py
