[project]
name = "cs-qualif-step2"
version = "0.1.0"
description = ""
authors = [
    {name = "Marc-Antoine Marier",email = "marc-antoine.marier.1@ulaval.ca"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "pydantic (>=2.11.10,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
